--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "utils",
-  "version": "1.0.0",
+  "name": "es-fp-utils",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
